; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto.c_ProtoFree.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Proto.c_ProtoFree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@protocols = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ProtoFree() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i64 0, i64* %1, align 8
  br label %4

4:                                                ; preds = %16, %0
  %5 = load i64, i64* %1, align 8
  %6 = call i64 (...) @ProtoNum()
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %8, label %19

8:                                                ; preds = %4
  %9 = load i64, i64* %1, align 8
  %10 = call %struct.TYPE_4__* @ProtoGet(i64 %9)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %3, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %2, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = call i32 @Free(%struct.TYPE_4__* %14)
  br label %16

16:                                               ; preds = %8
  %17 = load i64, i64* %1, align 8
  %18 = add nsw i64 %17, 1
  store i64 %18, i64* %1, align 8
  br label %4

19:                                               ; preds = %4
  %20 = load i32*, i32** @protocols, align 8
  %21 = call i32 @ReleaseList(i32* %20)
  store i32* null, i32** @protocols, align 8
  ret void
}

declare dso_local i64 @ProtoNum(...) #1

declare dso_local %struct.TYPE_4__* @ProtoGet(i64) #1

declare dso_local i32 @Free(%struct.TYPE_4__*) #1

declare dso_local i32 @ReleaseList(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
